rough draft styling

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,4 +1,14 @@
+/* Looks AWFUL in small sizing */
+/* @font-face {
+  font-family: 'machaCow';
+  src: url('../machaCow.ttf');
+}
+
+.themefont {
+  font-family: 'machaCow';
+} */
+
 form.signup,
 form.login {
-  margin-top: 250px;
+  margin-top: 50px;
 }
