--- a/public/stylesheets/kicks_style.css
+++ b/public/stylesheets/kicks_style.css
@@ -1,14 +1,10 @@
-.kick {
-  padding: 10px;
-  margin: 10px;
-  background-color: #e8f9ff;
-  color: #dc3545;
-}
 
 .cool-font {
   font-family: Shrikhand, cursive;
   font-size: 24px;
   color: #dc3545;
+  margin-left: 10px;
+  margin-top: 10px
 }
 
 .jumbotron {
@@ -16,21 +12,15 @@
   color: white;
   background-color: #1da1f2;
 }
-
+#topicChoice{
+  margin-left: 10px;
+}
 input,
 textarea {
-  margin: 0;
+  margin: 10px;
 }
 
-.btn {
-  margin: 10px;
-  font-family: Shrikhand, cursive;
-  color:#dc3545;
-  background-color: white;
-  border-color: #dc3545;
-  border-style: solid;
-  border-width: 2px;
-}
+
 
 p {
   margin: 0;
