--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,13 +8,17 @@
   font-family: 'machaCow';
 } */
 .modal-header {
-  background-color: #dc3545;
+  background-color: #ff0000;
   color: white;
  
 }
 
+/* .red{
+  background-color: #ff0000
+} */
+
 .modal-body{
-  color: #dc3545;
+  color: #ff0000;
   display: flexbox;
   flex-wrap: wrap;
   height: fit-content;
@@ -30,7 +34,7 @@
   padding: 10px;
   margin: 10px;
   background-color: #e8f9ff;
-  color: #dc3545;
+  color: #ff0000;
 }
 
 .class-info-hover {
@@ -56,6 +60,10 @@
 .footer-link {
   text-decoration: underline;
   color: white;
+}
+
+.myShadow{
+  shadow: 3px 3px rgb(189, 189, 189)
 }
 
 @media (max-width: 767.98px) {
