fixed click event propagation by unbinding nested event listeners, fixed contact page and links

--- a/public/stylesheets/kicks_style.css
+++ b/public/stylesheets/kicks_style.css
@@ -15,14 +15,18 @@
 #topicChoice{
   margin-left: 10px;
 }
+
 input,
 textarea {
   margin: 10px;
 }
 
-
-
 p {
   margin: 0;
   font-size: 16px;
+}
+
+#userPassword,
+#userEmail {
+  margin: 0px;
 }
