updated redirect for first time google sign in.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -43,6 +43,12 @@
   text-align: center;
 }
 
+.member-photo {
+  border-radius: 50%;
+  width: 64px;
+  height: 64px;
+}
+
 #myVideo {
   position: fixed;
   top: 36px;
